# logenium

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  devutils.bat  devutils.ps1  devutils.sh  requirements.txt
devutils/: pyproject.toml  requirements.txt
devutils/data/schemas/: config.schema.json
devutils/data/schemas/r1/: codegen.schema.json  config.schema.json
devutils/data/schemas/r2/: config.schema.json
devutils/data/schemas/r3/: config.schema.json
devutils/src/devutils/: __init__.py  __init__.pyi  __main__.py
devutils/src/devutils/commands/: __init__.py  __init__.pyi  build.py  build.pyi  check_license_headers.py  check_license_headers.pyi  clean.py  clean.pyi  configure.py  configure.pyi  docs.py  docs.pyi  format.py  format.pyi  lint.py  lint.pyi
devutils/src/devutils/commands/codegen/: __init__.py  __init__.pyi  wayland.py  wayland.pyi
devutils/src/devutils/commands/python/: __init__.py  __init__.pyi  remove_pycache.py  remove_pycache.pyi  stubgen.py  stubgen.pyi
devutils/src/devutils/commands/setup/: __init__.py  vscode.py  vscode.pyi
devutils/src/devutils/constants/: __init__.py  __init__.pyi  comments.py  comments.pyi  extensions.py  extensions.pyi  license_header.py  license_header.pyi  paths.py  paths.pyi
devutils/src/devutils/constants/paths/: __init__.py  __init__.pyi  codegen_files.py  codegen_files.pyi  config_files.py  config_files.pyi  directories.py  directories.pyi  files.py  files.pyi  (+4 more)
devutils/src/devutils/utils/: __init__.py  __init__.pyi  file_checking.py  filesystem.py  filesystem.pyi  git.py  git.pyi
libs/corelib/: CMakeLists.txt  Doxyfile
libs/corelib/cmake/: dependencies.cmake  options.cmake
libs/corelib/include/corelib/: casting.hxx  extensible-rtti.hxx  math.hxx  type_name.hxx  type_traits.hxx  types.hxx  utility.hxx
libs/corelib/src/: type_name.cxx
libs/corelib/src/extensible-rtti/: base.cxx
libs/corelib/src/utility/: type_name.cxx
libs/corelib/tests/: CMakeLists.txt
libs/corelib/tests/casting/: common.hxx
libs/corelib/tests/detail/: common.hxx
libs/corelib/tests/extensible-rtti/: common.cxx  common.hxx
libs/corelib/tests/type_name/: type_name.cxx
libs/corelib/tests/types/: float_constants.cxx  int_constants.cxx  type_name_float.cxx  type_name_int.cxx
libs/corelib/tests/utility/: CMakeLists.txt
libs/debug/: CMakeLists.txt  Doxyfile
libs/debug/cmake/: dependencies.cmake  options.cmake
libs/debug/include/: debug.hxx
libs/debug/include/debug/: assert.hxx  breakpoint.hxx  breakpoint_if_debugging.hxx  is_debugger_present.hxx  tracing.hxx
libs/debug/src/: breakpoint.cxx  breakpoint_if_debugging.cxx  is_debugger_present.cxx
libs/debug/src/tracing/: set_thread_name.cxx
libs/debug/tests/: CMakeLists.txt  assert.cxx  breakpoint.cxx  breakpoint_if_debugging.cxx  is_debugger_present.cxx
libs/logging/: CMakeLists.txt  Doxyfile
libs/logging/cmake/: dependencies.cmake  options.cmake
libs/logging/include/logging/: level.hxx  logging.hxx
libs/logging/tests/: CMakeLists.txt  logging.cxx
libs/logging/tests/level/: level.cxx  type_name_level.cxx
libs/xheader/: .gitignore  CMakeLists.txt
libs/xheader/cmake/: options.cmake
libs/xheader/data/codegen/: wayland.yaml
libs/xheader/include/xheader/: dlfcn.h  fcntl.h  unistd.h  wayland-client-core.h  wayland-client-protocol.h  wayland-client.h  wayland-util.h  windows.h  xdg-decoration-unstable-v1-client-protocol.h  xdg-shell-client-protocol.h
libs/xheader/src/dlfcn/: dlclose.c  dlopen.c
libs/xheader/src/unistd/: close.c  ftruncate.c
libs/xheader/src/wayland-client-core/: wl_display_connect.c  wl_display_disconnect.c  wl_display_dispatch.c  wl_display_roundtrip.c
libs/xheader/src/wayland-client-protocol/: wl_compositor_interface.c  wl_registry_interface.c  wl_shm_interface.c
libs/xheader/src/windows/: create_window_ex_a.c  create_window_ex_w.c  debug_break.c  def_window_proc_a.c  def_window_proc_w.c  destroy_window.c  dispatch_message_a.c  dispatch_message_w.c  get_message_a.c  get_message_w.c  get_module_handle_a.c  get_module_handle_w.c  get_window_long_ptr_a.c  get_window_long_ptr_w.c  is_debugger_present.c  load_cursor_a.c  load_cursor_w.c  load_icon_a.c  load_icon_w.c  post_quit_message.c  register_class_ex_a.c  register_class_ex_w.c  set_window_long_ptr_a.c  set_window_long_ptr_w.c  show_window.c  translate_message.c  unregister_class_a.c  unregister_class_w.c  update_window.c
libs/xheader/src/xdg-decoration/: zxdg_decoration_manager_v1_interface.c
libs/xheader/src/xdg-shell/: xdg_wm_base_interface.c
libs/xheader/tests/: CMakeLists.txt
libs/xheader/tests/dlfcn/: CMakeLists.txt  dlclose.cxx  dlopen.cxx
libs/xheader/tests/wayland-client-core/: CMakeLists.txt  wl_display_connect.cxx  wl_proxy_marshal_flags.cxx
libs/xheader/tests/wayland-client-protocol/: CMakeLists.txt  wl_compositor_create_surface.cxx  wl_shm_format_enum.cxx
libs/xheader/tests/wayland-util/: CMakeLists.txt  wl_array.cxx  wl_interface.cxx
libs/xheader/tests/windows/: CMakeLists.txt  create_window_ex_a.cxx  create_window_ex_w.cxx  debug_break.cxx  def_window_proc_a.cxx  def_window_proc_w.cxx  destroy_window.cxx  dispatch_message_a.cxx  dispatch_message_w.cxx  get_message_a.cxx  get_message_w.cxx  get_module_handle_a.cxx  get_module_handle_w.cxx  get_window_long_ptr_a.cxx  get_window_long_ptr_w.cxx  is_debugger_present.cxx  load_cursor_a.cxx  load_cursor_w.cxx  load_icon_a.cxx  load_icon_w.cxx  post_quit_message.cxx  register_class_ex_a.cxx  register_class_ex_w.cxx  set_window_long_ptr_a.cxx  set_window_long_ptr_w.cxx  show_window.cxx  translate_message.cxx  unregister_class_a.cxx  unregister_class_w.cxx  update_window.cxx
libs/xheader/tests/xcb/: CMakeLists.txt
libs/xheader/tests/xdg-decoration/: CMakeLists.txt  zxdg_decoration_manager_v1_get_toplevel_decoration.cxx  zxdg_toplevel_decoration_v1_mode_enum.cxx
libs/xheader/tests/xdg-shell/: CMakeLists.txt  xdg_surface_get_toplevel.cxx  xdg_wm_base_get_xdg_surface.cxx
tests/: CMakeLists.txt
tests/application/: application.cxx  window.cxx
(+144 files in other folders)
