[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logenium-devutils"
version = "0.0.1"
description = "Dev utils for logenium project"
requires-python = ">=3.14.2"
authors = [{ name = "Logenium Authors and Contributors" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

dependencies = ["typer>=0.20.1", "pyyaml>=6.0.3", "types-pyyaml>=6.0.12.20250915"]

[project.scripts]
logenium-devutils = "devutils.__main__:app"
devutils = "devutils.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]
include = ["devutils*"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
